RESOLVED FIXED114907
Fix some minor bad use of strings in WebCore
https://bugs.webkit.org/show_bug.cgi?id=114907
Summary Fix some minor bad use of strings in WebCore
Benjamin Poulain
Reported 2013-04-20 19:13:49 PDT
Fix some minor bad use of strings in WebCore
Attachments
Patch (2.79 KB, patch)
2013-04-20 19:22 PDT, Benjamin Poulain
darin: review+
Benjamin Poulain
Comment 1 2013-04-20 19:22:00 PDT
Darin Adler
Comment 2 2013-04-20 22:01:04 PDT
Comment on attachment 198950 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=198950&action=review > Source/WebCore/ChangeLog:9 > + (WebCore::Editor::selectedText): This was implictely getting the emptyString(). Typo or spelling error: should be "implicitly". But also, I don’t understand what you mean. Do you mean that 0 was turning into the null string?
Benjamin Poulain
Comment 3 2013-04-21 00:03:58 PDT
> But also, I don’t understand what you mean. Do you mean that 0 was turning into the null string? This replace(0, "") Would turn into this (there is no replace for char*): replace((UChar)0, String("")) And the constructor of String return the empty string if the length is 0 :(
Benjamin Poulain
Comment 4 2013-04-21 22:53:15 PDT
Note You need to log in before you can comment on or make changes to this bug.