Fix some minor bad use of strings in WebCore https://bugs.webkit.org/show_bug.cgi?id=114907

Reviewed by Darin Adler.

* editing/Editor.cpp:
(WebCore::Editor::selectedText): This was implicitly getting the emptyString()
for the argument "".
* editing/markup.cpp:
(WebCore::StyledMarkupAccumulator::takeResults): ditto.


Canonical link: https://commits.webkit.org/133355@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148854 268f45cc-cd09-0410-ab3c-d52691b4dbfc